2010-10-15  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Nikolas Zimmermann.

        [EFL] REGRESSION(69798) UCHAR can't be converted to String.
        https://bugs.webkit.org/show_bug.cgi?id=47698

        Create String value using String(const char*, 1) instead of operator[].

        No tests. No functionality changed.

        * platform/efl/PlatformKeyboardEventEfl.cpp:
        (WebCore::createWindowsKeyMap):

Canonical link: https://commits.webkit.org/60428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69849 268f45cc-cd09-0410-ab3c-d52691b4dbfc